# cti-ai-trust-gateway

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  HANDOFF_OPENCTI_PHASE1.md  HANDOFF_OPENCTI_PHASE1_AUDIT.md  HANDOFF_PHASE2.md  LICENSE  Makefile  README.md  RELEASE_READINESS.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/registry/: sources.yml
data/synthetic/: README.md
docs/: architecture.md  data-strategy.md  demo-walkthrough.md  evidence-model.md  opencti-phase1.md  policy-engine.md  threat-model.md  verification-matrix.md
docs/decisions/: 0001-architecture.md  0002-verification-strategy.md
docs/releases/: v0.1.0b1.md  v0.1.0b2.md  v0.2.0b1.md
examples/: demo-candidate.json  demo-report.txt
policies/: default.yml
scripts/: build_synthetic_benchmark.py  check_critical_coverage.py  run_synthetic_benchmark.py  verify_release_install.py
src/cti_trust_gateway/: __init__.py  config.py  demo.py
src/cti_trust_gateway/api/: __init__.py  app.py
src/cti_trust_gateway/cli/: main.py
src/cti_trust_gateway/compatibility/: __init__.py  checker.py  profile.py
src/cti_trust_gateway/core/: __init__.py  canonical.py  claims.py  service.py  snapshots.py
src/cti_trust_gateway/delivery/: __init__.py  artifact.py  config.py  security.py  service.py  transport.py
src/cti_trust_gateway/domain/: __init__.py  models.py
src/cti_trust_gateway/evidence/: __init__.py  engine.py
src/cti_trust_gateway/exporters/: __init__.py  exporter.py
src/cti_trust_gateway/parsers/: __init__.py  document.py
src/cti_trust_gateway/policies/: __init__.py  engine.py
src/cti_trust_gateway/providers/: __init__.py  semantic.py
src/cti_trust_gateway/scanners/: __init__.py  document_security.py
src/cti_trust_gateway/storage/: __init__.py  repository.py
src/cti_trust_gateway/validators/: __init__.py  stix.py
src/cti_trust_gateway/web/static/: app.js  (+1 more)
tests/: conftest.py
tests/adversarial/: README.md  __init__.py  cases.py  test_hand_authored_cases.py  test_offline_fixtures.py  test_opencti_audit_hardening.py  test_opencti_delivery.py  test_security_invariants.py
tests/fixtures/: README.md
tests/fixtures/offline/: README.md  mitre-attack-subset.json  oasis-indicator.json  report-ar.txt  report-en.txt  report-mixed.txt  vulnerability-subset.json
tests/fixtures/opencti_phase1/: README.md  cases.json
tests/integration/: test_api.py  test_cli.py  test_opencti_interfaces.py  test_service_demo.py
tests/unit/: test_document_parser.py  test_evidence.py  test_opencti_artifact.py  test_opencti_compatibility.py  test_opencti_security.py  test_package_resources.py  test_policy.py  test_provider.py  test_scanner.py  test_stix.py
(+7 files in other folders)
