[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cti-ai-trust-gateway"
version = "0.2.0b1"
description = "Vendor-neutral verification gateway for AI-generated cyber threat intelligence: evidence grounding, STIX 2.1 validation, policy enforcement, and human review"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12,<3.14"
authors = [{name = "CTI AI Trust Gateway contributors"}]
keywords = ["cyber-threat-intelligence", "STIX", "AI assurance", "evidence", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
  "stix2>=3.0,<4",
  "stix2-validator>=3.2,<4",
  "pymupdf>=1.24,<2",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7,<2",
  "build>=1.2,<2",
  "httpx>=0.27,<1",
  "mypy>=1.11,<3",
  "pip-audit>=2.10,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.7,<1",
  "types-PyYAML>=6.0",
  "twine>=6,<7",
]
openai = ["openai>=1.50,<3"]

[project.scripts]
cti-trust = "cti_trust_gateway.cli.main:app"

[project.urls]
Homepage = "https://github.com/ag2020sa/cti-ai-trust-gateway"
Repository = "https://github.com/ag2020sa/cti-ai-trust-gateway"
Issues = "https://github.com/ag2020sa/cti-ai-trust-gateway/issues"
Changelog = "https://github.com/ag2020sa/cti-ai-trust-gateway/blob/main/CHANGELOG.md"
Security = "https://github.com/ag2020sa/cti-ai-trust-gateway/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/cti_trust_gateway"]

[tool.hatch.build.targets.wheel.shared-data]
"THIRD_PARTY_NOTICES.md" = "share/doc/cti-ai-trust-gateway/THIRD_PARTY_NOTICES.md"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "data/synthetic/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]
ignore = ["B008", "E501", "S101", "S105"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["cti_trust_gateway"]
exclude = ["scripts"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B105"]

[tool.coverage.run]
source = ["cti_trust_gateway"]
branch = true
omit = ["*/web/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
